--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.740Z",
-        "lastAccessed": "2025-08-13T20:44:07.740Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "pas",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.5303868055343628",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
-    },
-    {
-        "key": "wd",
-        "value": "400x889",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "wl_cbv",
@@ -86,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.5303868055343628",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
+    },
+    {
+        "key": "wd",
+        "value": "400x889",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "c_user",
@@ -95,25 +95,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "xs",
-        "value": "45%3AGXLXYHJ4gbTy9w%3A2%3A1755117838%3A-1%3A-1",
+        "value": "25%3A5IzlwOa918Vc1w%3A2%3A1755141681%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     },
     {
         "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWfrizUCJ8bc1lPb0KMH0YiNWoTubYMxD9ySkjx-wexPBMRkdy8.BonCai..AAA.0.0.BonPkQ.AWdOthR-VuviUH5ubMtMUVIwBek",
+        "value": "0ifFk4CHLiLxjHzCd.AWdBO_Ltp29DRC8UAAYZusFd7eNjHWm5DjdUCi2K3WfeuKpk-1c.BonCai..AAA.0.0.BonVYy.AWcVdBBa6tlMcFbKm4lWHIyEIMw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:44:07.741Z",
-        "lastAccessed": "2025-08-13T20:44:07.741Z"
+        "creation": "2025-08-14T03:21:28.027Z",
+        "lastAccessed": "2025-08-14T03:21:28.027Z"
     }
 ]
