--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.559Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "wl_cbv",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.5303868055343628",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
+    },
+    {
+        "key": "wd",
+        "value": "400x889",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "c_user",
@@ -77,25 +95,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "xs",
-        "value": "24%3AKSiiSlzWk-O_DA%3A2%3A1755160313%3A-1%3A-1",
+        "value": "33%3AfFlAV6btCCHcvQ%3A2%3A1755329477%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     },
     {
         "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWfO7qdYfhP0i9UjcKocVvyBzgnEFuSiRJ7e5utVCOfDKG8dGSc.BonCai..AAA.0.0.BonZ77.AWcwBe9IS9wonzz6ofAExZ-fTjM",
+        "value": "0ifFk4CHLiLxjHzCd.AWc_P-Wb7JuI2KhJpIvtO0_Ty4LJPTckVAniCOdx6Ah3n5fwaXU.BonCai..AAA.0.0.BooDPH.AWd2S3Cx286ft01hAPk_j4JUJ88",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-16T07:28:23.566Z",
-        "lastAccessed": "2025-08-16T07:28:23.566Z"
+        "creation": "2025-08-16T07:31:25.097Z",
+        "lastAccessed": "2025-08-16T07:31:25.097Z"
     }
 ]
